# li-memcached-client

./: .gitignore  Makefile  README.md  pyproject.toml
.circleci/: config.yml
li_memcached_client/: memcached_client.py
tests/: test_memcached_client.py
