[project]
name = "li-memcached-client"
dynamic = ["version"]
version = "0.2.0"
description = "Package that helps to get memcached iteractions"
authors = [{name = "Alini Ribeiro", email = "aliniribeiroo@gmail.com"}]
readme = "README.md"
keywords = ["li", "memcached", "stats"]

[tool.poetry.dependencies]
python = ">=3.11"

[poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "li_memcached_client" }
]

[project.urls]
Homepage = "https://github.com/liniribeiro/li-memcached-client"
Documentation = "https://github.com/liniribeiro/li-memcached-client"
Source = "https://github.com/liniribeiro/li-memcached-client"